system/userland/macros/tests/entrypoint/fail/unsupported_type.rs
#![allow(unused)]

use selium_userland_macros::entrypoint;

#[entrypoint]
fn guest((a, b): (i32, i32)) {}

fn main() {}
